Force estimators: bare Hellman-Feynman estimator and Ceperley-Chiesa estimator
git-svn-id: http://qmcpack.googlecode.com/svn@3321 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -6,6 +6,8 @@ SET(HAMSRCS
   NonLocalTOperator.cpp
   NumericalRadialPotential.cpp
   RPAPressure.cpp
+  ForceBase.cpp
+  ForceCeperley.cpp
 )
 #  FSAtomPseudoPot.cpp
 
