--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -31,6 +31,10 @@ ENDIF(OHMMS_DIM MATCHES 3)
 #)
 #ENDIF(HAVE_LIBFFTW)
 
+IF(HAVE_LIBFFTW)
+  SET(HAMSRCS ${HAMSRCS} MPC.cpp)
+ENDIF(HAVE_LIBFFTW)
+
 ADD_LIBRARY(qmcham ${HAMSRCS})
 #IF(QMC_BUILD_STATIC)
 #  ADD_LIBRARY(qmcham STATIC ${HAMSRCS})
