Enable use of MPC.
git-svn-id: http://qmcpack.googlecode.com/svn@3351 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -242,7 +242,7 @@ INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindPkgConfig.cmake)
-#INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
+INCLUDE(${PROJECT_CMAKE}/FindFFTW.cmake)
 
 IF(QMC_MPI)
   IF(MPIP_PROFILE)
@@ -270,11 +270,11 @@ ELSE(FOUND_BOOST)
   MESSAGE(FATAL_ERROR "Require boost 1.33.x or higher. Set BOOST_HOME")
 ENDIF(FOUND_BOOST)
 
-#IF(FOUND_FFTW)
-#  SET(HAVE_LIBFFTW 1)
-#  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
-#  LINK_LIBRARIES(${FFTW_LIBRARY})
-#ENDIF(FOUND_FFTW)
+IF(FOUND_FFTW)
+  SET(HAVE_LIBFFTW 1)
+  INCLUDE_DIRECTORIES(${FFTW_INCLUDE_DIR})
+  LINK_LIBRARIES(${FFTW_LIBRARY})
+ENDIF(FOUND_FFTW)
 
 IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
