--- a/branches/cuda-20080919/src/CMakeLists.txt
+++ b/branches/cuda-20080919/src/CMakeLists.txt
@@ -76,6 +76,12 @@ SET(PARTICLE
   LongRange/LRCoulombSingleton.cpp
 )
 
+IF(QMC_CUDA)
+   SET(PARTICLE ${PARTICLE} Particle/accept_kernel.cu )
+ENDIF(QMC_CUDA)
+
+
+
 SET(PARTICLEIO
   ParticleTags.cpp 
   ParticleIO/ParticleLayoutIO.cpp 
@@ -92,7 +98,12 @@ IF(HAVE_LIBHDF5)
      )
 ENDIF(HAVE_LIBHDF5)
 
-ADD_LIBRARY(qmcbase ${PARTICLE}  ${PARTICLEIO})
+IF(QMC_CUDA)
+   CUDA_ADD_LIBRARY(qmcbase ${PARTICLE}  ${PARTICLEIO})	
+ELSE(QMC_CUDA)
+  ADD_LIBRARY(qmcbase ${PARTICLE}  ${PARTICLEIO})
+ENDIF(QMC_CUDA)
+
 #IF(QMC_BUILD_STATIC)
 #  ADD_LIBRARY(qmcbase STATIC ${PARTICLE}  ${PARTICLEIO})
 #ELSE(QMC_BUILD_STATIC)
