added e-He potential. made a modular Reptile Estimator object with drop in elements and a correlation estimator max_walkers is a new DMC parameter to allow for wider population fluctuations for Forward Walking
git-svn-id: http://qmcpack.googlecode.com/svn@3407 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -32,6 +32,7 @@ SET(QMCDRIVERS
   ../Estimators/LocalEnergyEstimator.cpp
   ../Estimators/MultipleEnergyEstimator.cpp
   ../Estimators/RQMCMultipleEstimator.cpp
+  ../Estimators/ComboPolymerEstimator.cpp
   ../Estimators/CompositeEstimators.cpp
   ../Estimators/GofREstimator.cpp
   ../Estimators/SkEstimator.cpp
