Rename ComboOrbital as ProductOrbital and remove unused classes from CMakeLists.txt
git-svn-id: http://qmcpack.googlecode.com/svn@3418 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -3,7 +3,7 @@ SET(WFBASE_SRCS
     OrbitalBase.cpp
     OrbitalBuilderBase.cpp
     WaveFunctionFactory.cpp
-    ComboOrbital.cpp
+    ProductOrbital.cpp
     OrbitalConstraintsBase.cpp
    )
 
@@ -13,7 +13,6 @@ SET(JASTROW_SRCS
   Jastrow/JABBuilder.cpp
   Jastrow/PadeJastrowBuilder.cpp
   Jastrow/WMJastrowBuilder.cpp
-  Jastrow/AnyConstraints.cpp
   Jastrow/CBSOBuilder.cpp
   Jastrow/JastrowBuilder.cpp
   Jastrow/BsplineJastrowBuilder.cpp
