Trying to add support for complex orbitals.
git-svn-id: http://qmcpack.googlecode.com/svn@3441 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
+++ b/branches/cuda-20080919/src/QMCWaveFunctions/CMakeLists.txt
@@ -58,6 +58,11 @@ IF(QMC_CUDA)
    SET(JASTROW_SRCS ${JASTROW_SRCS}
        Jastrow/CudaSpline.cu
       )
+   IF(HAVE_EINSPLINE)
+      SET(FERMION_SRCS ${FERMION_SRCS}
+         EinsplineSetCuda.cu
+         )
+   ENDIF(HAVE_EINSPLINE)
 ENDIF(QMC_CUDA)
 
 # wavefunctions only availbale to 3-dim problems
