Add functions to handle dependent estimators. observerable_helper class is added for hdf5 output.
git-svn-id: http://qmcpack.googlecode.com/svn@3446 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(HAMSRCS
+  QMCHamiltonianBase.cpp
   QMCHamiltonian.cpp
   CoulombPBCAATemp.cpp
   CoulombPBCABTemp.cpp
@@ -11,6 +12,7 @@ SET(HAMSRCS
   ChiesaCorrection.cpp
   PairCorrEstimator.cpp
   DensityEstimator.cpp
+  SkEstimator.cpp
 )
 #  FSAtomPseudoPot.cpp
 
