Added WFMC driver. This allows truncated PDMC. Also added hard hacks for Neutrino problem. relevant for WFMC runs.
git-svn-id: http://qmcpack.googlecode.com/svn@3468 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -29,6 +29,7 @@ SET(QMCDRIVERS
   CorrelatedSampling/CSVMCUpdateAll.cpp
   CorrelatedSampling/CSVMCUpdatePbyP.cpp
   ../Estimators/LocalEnergyEstimator.cpp
+  ../Estimators/WFMCOnlyEstimator.cpp
   ../Estimators/LocalEnergyEstimatorHDF.cpp
   ../Estimators/MultipleEnergyEstimator.cpp
   ../Estimators/RQMCMultipleEstimator.cpp
@@ -44,6 +45,7 @@ SET(QMCDRIVERS
 IF(ENABLE_OPENMP) 
   SET(QMCDRIVERS ${QMCDRIVERS} 
       VMC/VMCSingleOMP.cpp
+      VMC/WFMCSingleOMP.cpp
       DMC/DMCOMP.cpp
       QMCCostFunctionOMP.cpp
      )
