Adding Pulay force.\n
git-svn-id: http://qmcpack.googlecode.com/svn@3494 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(HAMSRCS
   NumericalRadialPotential.cpp
   RPAPressure.cpp
   ForceBase.cpp
+  PulayForce.cpp
   ForceCeperley.cpp
   ChiesaCorrection.cpp
   PairCorrEstimator.cpp
