Fix forward walking and dmc correction.
git-svn-id: http://qmcpack.googlecode.com/svn@3529 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -10,6 +10,8 @@ SET(HAMSRCS
   ForceBase.cpp
   PulayForce.cpp
   ForceCeperley.cpp
+  ForwardWalking.cpp
+  trialDMCcorrection.cpp
   ChiesaCorrection.cpp
   PairCorrEstimator.cpp
   DensityEstimator.cpp
