Adding zero variance force term.  Does not yet work.
git-svn-id: http://qmcpack.googlecode.com/svn@3537 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -9,6 +9,7 @@ SET(HAMSRCS
   RPAPressure.cpp
   ForceBase.cpp
   PulayForce.cpp
+  ZeroVarianceForce.cpp
   ForceCeperley.cpp
   ForwardWalking.cpp
   trialDMCcorrection.cpp
