Adding missing file to CMakeLists.
git-svn-id: http://qmcpack.googlecode.com/svn@3648 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -81,6 +81,7 @@ IF(HAVE_LIBHDF5)
       Particle/HDFWalkerInput_0_0.cpp
       Particle/HDFWalkerInput_0_4.cpp
       ParticleIO/HDFParticleIO.cpp 
+      ParticleIO/ESHDFParticleParser.cpp
      )
 ENDIF(HAVE_LIBHDF5)
 
