Check QMC_BUILD_COMPLETE for Bead_Particle.
git-svn-id: http://qmcpack.googlecode.com/svn@3671 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -59,7 +59,6 @@ SET(PARTICLE
   Particle/ParticleSet.cpp 
   Particle/ParticleSet.BC.cpp 
   Particle/MCWalkerConfiguration.cpp 
-  Particle/Bead_ParticleSet.cpp 
   Particle/DistanceTable.cpp
   Particle/HDFWalkerInputManager.cpp
   LongRange/KContainer.cpp
@@ -67,6 +66,12 @@ SET(PARTICLE
   LongRange/LPQHIBasis.cpp			      	
   LongRange/LRCoulombSingleton.cpp
 )
+
+IF(NOT QMC_BUILD_COMPLETE)
+  SET(PARTICLE ${PARTICLE}
+    Particle/Bead_ParticleSet.cpp 
+    )
+ENDIF(NOT QMC_BUILD_COMPLETE)
 
 SET(PARTICLEIO
   ParticleTags.cpp 
