--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -67,11 +67,11 @@ SET(PARTICLE
   LongRange/LRCoulombSingleton.cpp
 )
 
-IF(NOT QMC_BUILD_COMPLETE)
+IF(QMC_BUILD_COMPLETE)
   SET(PARTICLE ${PARTICLE}
     Particle/Bead_ParticleSet.cpp 
     )
-ENDIF(NOT QMC_BUILD_COMPLETE)
+ENDIF(QMC_BUILD_COMPLETE)
 
 SET(PARTICLEIO
   ParticleTags.cpp 
