Other functions for MultiDiracDeterminantBase
git-svn-id: http://qmcpack.googlecode.com/svn@3691 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -47,6 +47,10 @@ SET(FERMION_SRCS
   SPOSetBase.cpp
   BasisSetFactory.cpp
   Fermion/DiracDeterminantBase.cpp
+  Fermion/DiracDeterminantIterative.cpp
+  Fermion/DiracDeterminantTruncation.cpp
+  Fermion/MultiDiracDeterminantBase.cpp
+  Fermion/ILUGMRESInterface.c
   Fermion/SlaterDet.cpp
   Fermion/SlaterDetBuilder.cpp
 )
