Added a new file.
git-svn-id: http://qmcpack.googlecode.com/svn@3714 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -18,6 +18,7 @@ SET(QMCDRIVERS
   VMC/VMCFactory.cpp
   DMC/DMCUpdateAll.cpp
   DMC/DMCUpdatePbyP.cpp
+  DMC/DMCUpdatePbyPFast.cpp
   DMC/DMCNonLocalUpdate.cpp
   DMC/DMC.cpp
   DMC/DMCFactory.cpp
