Four helium 2-body potentials some tail correction values remain to be worked out HFDBHE_smoothed files are excluded from HamiltonianFactory for now
git-svn-id: http://qmcpack.googlecode.com/svn@3724 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/CMakeLists.txt
+++ b/trunk/src/QMCHamiltonians/CMakeLists.txt
@@ -22,6 +22,10 @@ SET(HAMSRCS
 
 IF(OHMMS_DIM MATCHES 3)
   SET(HAMSRCS ${HAMSRCS}
+      LennardJones_smoothed.cpp
+      HFDHE2_Moroni1995.cpp
+#      HFDBHE_smoothed.cpp
+      HeSAPT_smoothed.cpp
       LocalCorePolPotential.cpp
       LocalECPotential.cpp
       NonLocalECPComponent.cpp
