removing wfmc files from VMC. will be committed to another location
git-svn-id: http://qmcpack.googlecode.com/svn@3741 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -16,6 +16,7 @@ SET(QMCDRIVERS
   VMC/VMCUpdateAll.cpp
   VMC/VMCSingle.cpp
   VMC/VMCFactory.cpp
+  WFMC/WFMCUpdateAll.cpp
   DMC/DMCOMP.cpp
   DMC/DMCUpdateAll.cpp
   DMC/DMCUpdatePbyP.cpp
@@ -34,7 +35,7 @@ SET(QMCDRIVERS
 IF(ENABLE_OPENMP) 
   SET(QMCDRIVERS ${QMCDRIVERS} 
       VMC/VMCSingleOMP.cpp
-      VMC/WFMCSingleOMP.cpp
+      WFMC/WFMCSingleOMP.cpp
       QMCCostFunctionOMP.cpp
      )
 ENDIF(ENABLE_OPENMP) 
