--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(QMCDRIVERS
   BranchIO.cpp
   QMCDriver.cpp
   QMCOptimize.cpp
+  QMCLinearOptimize.cpp
   QMCCostFunctionBase.cpp
   QMCCostFunctionSingle.cpp
   WaveFunctionTester.cpp
