Laid groundwork for real-only specialization of AtomicOrbital.
git-svn-id: http://qmcpack.googlecode.com/svn@3807 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/CMakeLists.txt
+++ b/trunk/src/QMCWaveFunctions/CMakeLists.txt
@@ -68,6 +68,7 @@ IF(OHMMS_DIM MATCHES 3)
       MolecularOrbitals/GTOBuilder.cpp
       MolecularOrbitals/NGOBuilder.cpp
       MolecularOrbitals/BsplineAOBuilder.cpp
+      AtomicOrbital.cpp
      )
   IF(HAVE_EINSPLINE)
     SET(FERMION_SRCS 
