bug fix. removed scaling for linear parameters. FW estimator is hdf, OMP done. MPI next.
git-svn-id: http://qmcpack.googlecode.com/svn@3854 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -16,7 +16,7 @@ SET(QMCDRIVERS
   VMC/VMCUpdatePbyP.cpp
   VMC/VMCUpdateAll.cpp
   VMC/VMCSingle.cpp
-  ForwardWalking/FWSingle.cpp
+  ForwardWalking/FWSingleOMP.cpp
   VMC/VMCFactory.cpp
   WFMC/WFMCUpdateAll.cpp
   DMC/DMCOMP.cpp
