MPI version of FW evaluator for testing.
git-svn-id: http://qmcpack.googlecode.com/svn@3856 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCDrivers/CMakeLists.txt
+++ b/trunk/src/QMCDrivers/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(QMCDRIVERS
   VMC/VMCUpdateAll.cpp
   VMC/VMCSingle.cpp
   ForwardWalking/FWSingleOMP.cpp
+  ForwardWalking/FWSingleMPI.cpp
   VMC/VMCFactory.cpp
   WFMC/WFMCUpdateAll.cpp
   DMC/DMCOMP.cpp
@@ -26,9 +27,6 @@ SET(QMCDRIVERS
   DMC/DMCFactory.cpp
   DMC/WalkerControlFactory.cpp
   DMC/WalkerReconfiguration.cpp
-  VMC/VMCSingleOMP.cpp
-  WFMC/WFMCSingleOMP.cpp
-  QMCCostFunctionOMP.cpp
   ../Estimators/LocalEnergyEstimator.cpp
   ../Estimators/WFMCOnlyEstimator.cpp
   ../Estimators/FWEstimator.cpp
@@ -38,6 +36,13 @@ SET(QMCDRIVERS
   ../Estimators/CollectablesEstimator.cpp
 )
 
+IF(ENABLE_OPENMP) 
+  SET(QMCDRIVERS ${QMCDRIVERS} 
+      VMC/VMCSingleOMP.cpp
+      WFMC/WFMCSingleOMP.cpp
+      QMCCostFunctionOMP.cpp
+     )
+ENDIF(ENABLE_OPENMP) 
 
 IF(HAVE_MPI) 
   SET(QMCDRIVERS ${QMCDRIVERS} 
